发送验证码

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,14 @@ spring:
       idle-timeout: 300000
       maximum-pool-size: 5
       minimum-idle: 5
+
+  mail:
+    protocol: smtps
+    host: smtp.163.com
+    port: 465
+    username: 18967220636@163.com
+    password: UUvD283xqxYEKyAi
+    default-encoding: UTF-8
+    from: 18967220636@163.com
+    properties:
+      mail.smtp.socketFactoryClass: javax.net.ssl.SSLSocketFactory
