增加短链接不存在跳转提示页面

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,11 @@ spring:
     properties:
       mail.smtp.socketFactoryClass: javax.net.ssl.SSLSocketFactory
 
+  mvc:
+    view:
+      prefix: /templates/
+      suffix: .html
+
 short-link:
   domain:
     default: buaa.link:8000
