--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <hutool-all.version>5.8.20</hutool-all.version>
         <guava.version>30.0-jre</guava.version>
+        <jsoup.version>1.15.3</jsoup.version>
     </properties>
 
     <dependencyManagement>
@@ -80,13 +81,17 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
     </dependencies>
-
-
 
     <build>
         <plugins>
