--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <hutool-all.version>5.8.20</hutool-all.version>
         <guava.version>30.0-jre</guava.version>
         <jsoup.version>1.15.3</jsoup.version>
+        <oss.version>3.15.1</oss.version>
+        <caffeine.version>2.7.0</caffeine.version>
     </properties>
 
     <dependencyManagement>
@@ -91,6 +93,19 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>${oss.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
