支付宝支付

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <jsoup.version>1.15.3</jsoup.version>
         <oss.version>3.15.1</oss.version>
         <caffeine.version>2.7.0</caffeine.version>
+        <alipay-sdk-java.version>4.35.79.ALL</alipay-sdk-java.version>
     </properties>
 
     <dependencyManagement>
@@ -105,6 +106,13 @@
             <artifactId>caffeine</artifactId>
             <version>${caffeine.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>${alipay-sdk-java.version}</version>
+        </dependency>
+
 
     </dependencies>
 
